@@ -9,6 +9,8 @@ export(EstPrior_rcpp)
 export(NOISY_FUN)
 export(Prior_fun)
 export(SyntheticControl)
+export(asMatrix)
+export(as_matrix)
 export(bayNorm)
 export(bayNorm_sup)
 export(noisy_gene_detection)
