@@ -73,12 +73,12 @@ BEGIN_RCPP
 END_RCPP
 }
 // Main_NB_Bay
-NumericVector Main_NB_Bay(arma::sp_mat Data, NumericVector BETA_vec, NumericVector size, Nullable<NumericVector> mu, int S, int thres);
+NumericVector Main_NB_Bay(NumericMatrix Data, NumericVector BETA_vec, NumericVector size, Nullable<NumericVector> mu, int S, int thres);
 RcppExport SEXP _bayNorm_Main_NB_Bay(SEXP DataSEXP, SEXP BETA_vecSEXP, SEXP sizeSEXP, SEXP muSEXP, SEXP SSEXP, SEXP thresSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
-    Rcpp::traits::input_parameter< arma::sp_mat >::type Data(DataSEXP);
+    Rcpp::traits::input_parameter< NumericMatrix >::type Data(DataSEXP);
     Rcpp::traits::input_parameter< NumericVector >::type BETA_vec(BETA_vecSEXP);
     Rcpp::traits::input_parameter< NumericVector >::type size(sizeSEXP);
     Rcpp::traits::input_parameter< Nullable<NumericVector> >::type mu(muSEXP);
@@ -89,12 +89,12 @@ BEGIN_RCPP
 END_RCPP
 }
 // Main_mean_NB_Bay
-NumericMatrix Main_mean_NB_Bay(arma::sp_mat Data, NumericVector BETA_vec, NumericVector size, Nullable<NumericVector> mu, int S, int thres);
+NumericMatrix Main_mean_NB_Bay(NumericMatrix Data, NumericVector BETA_vec, NumericVector size, Nullable<NumericVector> mu, int S, int thres);
 RcppExport SEXP _bayNorm_Main_mean_NB_Bay(SEXP DataSEXP, SEXP BETA_vecSEXP, SEXP sizeSEXP, SEXP muSEXP, SEXP SSEXP, SEXP thresSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
-    Rcpp::traits::input_parameter< arma::sp_mat >::type Data(DataSEXP);
+    Rcpp::traits::input_parameter< NumericMatrix >::type Data(DataSEXP);
     Rcpp::traits::input_parameter< NumericVector >::type BETA_vec(BETA_vecSEXP);
     Rcpp::traits::input_parameter< NumericVector >::type size(sizeSEXP);
     Rcpp::traits::input_parameter< Nullable<NumericVector> >::type mu(muSEXP);
@@ -105,12 +105,12 @@ BEGIN_RCPP
 END_RCPP
 }
 // Main_mode_NB_Bay
-NumericMatrix Main_mode_NB_Bay(arma::sp_mat Data, NumericVector BETA_vec, NumericVector size, Nullable<NumericVector> mu, int S, int thres);
+NumericMatrix Main_mode_NB_Bay(NumericMatrix Data, NumericVector BETA_vec, NumericVector size, Nullable<NumericVector> mu, int S, int thres);
 RcppExport SEXP _bayNorm_Main_mode_NB_Bay(SEXP DataSEXP, SEXP BETA_vecSEXP, SEXP sizeSEXP, SEXP muSEXP, SEXP SSEXP, SEXP thresSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
-    Rcpp::traits::input_parameter< arma::sp_mat >::type Data(DataSEXP);
+    Rcpp::traits::input_parameter< NumericMatrix >::type Data(DataSEXP);
     Rcpp::traits::input_parameter< NumericVector >::type BETA_vec(BETA_vecSEXP);
     Rcpp::traits::input_parameter< NumericVector >::type size(sizeSEXP);
     Rcpp::traits::input_parameter< Nullable<NumericVector> >::type mu(muSEXP);
@@ -142,6 +142,21 @@ BEGIN_RCPP
     return rcpp_result_gen;
 END_RCPP
 }
+// asMatrix
+IntegerMatrix asMatrix(NumericVector rp, NumericVector cp, NumericVector z, int nrows, int ncols);
+RcppExport SEXP _bayNorm_asMatrix(SEXP rpSEXP, SEXP cpSEXP, SEXP zSEXP, SEXP nrowsSEXP, SEXP ncolsSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    Rcpp::traits::input_parameter< NumericVector >::type rp(rpSEXP);
+    Rcpp::traits::input_parameter< NumericVector >::type cp(cpSEXP);
+    Rcpp::traits::input_parameter< NumericVector >::type z(zSEXP);
+    Rcpp::traits::input_parameter< int >::type nrows(nrowsSEXP);
+    Rcpp::traits::input_parameter< int >::type ncols(ncolsSEXP);
+    rcpp_result_gen = Rcpp::wrap(asMatrix(rp, cp, z, nrows, ncols));
+    return rcpp_result_gen;
+END_RCPP
+}
 
 static const R_CallMethodDef CallEntries[] = {
     {"_bayNorm_DownSampling", (DL_FUNC) &_bayNorm_DownSampling, 2},
@@ -154,6 +169,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"_bayNorm_Main_mode_NB_Bay", (DL_FUNC) &_bayNorm_Main_mode_NB_Bay, 6},
     {"_bayNorm_EstPrior_rcpp", (DL_FUNC) &_bayNorm_EstPrior_rcpp, 1},
     {"_bayNorm_t_sp", (DL_FUNC) &_bayNorm_t_sp, 1},
+    {"_bayNorm_asMatrix", (DL_FUNC) &_bayNorm_asMatrix, 5},
     {NULL, NULL, 0}
 };
 
